--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,12 @@
-body {
-    font-family: Arial, sans-serif;
+:root {
+    --fuente-principal: 'Roboto', sans-serif;
 }
 
+
+
+body {
+    font-family: var(--fuente-principal);
+}
 
 main {
     width: 80%;
