--- a/CSS/stylesConfiguration.css
+++ b/CSS/stylesConfiguration.css
@@ -4,9 +4,16 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
+:root {
+    --fuente-principal: 'Roboto', sans-serif;
 }
+
+
+
+body {
+    font-family: var(--fuente-principal);
+}
+
 
 
 header {
@@ -62,10 +69,11 @@ nav#Navegacion {
     }
 
 /* Contenedor */
+
 .accionesAdicionales {
     display: flex;
     align-items: center;
-    gap: 50px; /* Aqui si va gab ya que es separacion de los elementos dentro del contenedor*/
+    gap: 15px; /* Espacio entre los elementos dentro del contenedor */
 }
 
 #search {
@@ -84,8 +92,8 @@ nav#Navegacion {
 }
 
 main {
-    max-width: 1000px; /* Tamaño del contenedor main*/
-    margin: 50px auto; /* distnacia entre el main y header */
+    max-width: 90vw; /* 90% del ancho visible del navegador */
+    margin: 50px auto;
     text-align: center;
 }
 
@@ -133,6 +141,51 @@ main h1 {
         font-size: 14px;
         margin-bottom: 5px;
     }
+
+
+
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+    /* Imagen del usuario */
+    .dropdown img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+
+/* Contenido del dropdown */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+    border-radius: 6px;
+    z-index: 1;
+}
+
+    /* Links del menú */
+    .dropdown-content a {
+        color: black;
+        padding: 10px 14px;
+        text-decoration: none;
+        display: block;
+    }
+
+        .dropdown-content a:hover {
+            background-color: #eee;
+        }
+
+/* Mostrar el menú cuando tenga la clase "show" */
+.show {
+    display: block;
+}
 
 input#name {
     width: 50%;
@@ -211,3 +264,48 @@ footer {
         footer nav a:hover {
             text-decoration: underline; /* Subraya el link al pasar el mouse para indicar interactividad */
         }
+
+@media (max-width: 768px) {
+    body {
+        padding: 10px;
+    }
+
+    main {
+        max-width: 100%;
+        margin: 0 auto;
+        padding: 10px;
+        align-content: center;
+        align-items: center;
+    }
+
+    .conf-form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .form-row,
+    .form-group {
+        width: 100%;
+    }
+
+    input,
+    textarea {
+        width: 100%;
+        padding: 10px;
+        font-size: 1em;
+    }
+
+    .form-actions {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+    }
+
+        .form-actions a,
+        .form-actions button {
+            width: 100%;
+            text-align: center;
+        }
+}
