--- a/CSS/stylesRides.css
+++ b/CSS/stylesRides.css
@@ -1,13 +1,14 @@
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+:root {
+    --fuente-principal: 'Roboto', sans-serif;
 }
 
+
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--fuente-principal);
 }
+
 
 
 header {
@@ -66,7 +67,7 @@ nav#Navegacion {
 .accionesAdicionales {
     display: flex;
     align-items: center;
-    gap: 50px; /* Aqui si va gab ya que es separacion de los elementos dentro del contenedor*/
+    gap: 15px; /* Aqui si va gab ya que es separacion de los elementos dentro del contenedor*/
 }
 
 #search {
@@ -77,11 +78,47 @@ nav#Navegacion {
     padding: 0 10px; /* Separa lo de adentro del input */
 }
 
-.perfil {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%; /* Imagen redonda */
-    overflow: hidden; /* Oculta el desbordamiento de la imagen */
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+    /* Imagen del usuario */
+    .dropdown img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+
+/* Contenido del dropdown */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+    border-radius: 6px;
+    z-index: 1;
+}
+
+    /* Links del menú */
+    .dropdown-content a {
+        color: black;
+        padding: 10px 14px;
+        text-decoration: none;
+        display: block;
+    }
+
+        .dropdown-content a:hover {
+            background-color: #eee;
+        }
+
+/* Mostrar el menú cuando tenga la clase "show" */
+.show {
+    display: block;
 }
 
 
