--- a/CSS/stylesEditProfile.css
+++ b/CSS/stylesEditProfile.css
@@ -4,8 +4,14 @@
     box-sizing: border-box;
 }
 
+:root {
+    --fuente-principal: 'Roboto', sans-serif;
+}
+
+
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--fuente-principal);
 }
 
 
@@ -65,7 +71,7 @@ nav#Navegacion {
 .accionesAdicionales {
     display: flex;
     align-items: center;
-    gap: 50px; /* Aqui si va gab ya que es separacion de los elementos dentro del contenedor*/
+    gap: 15px; /* Aqui si va gab ya que es separacion de los elementos dentro del contenedor*/
 }
 
 #search {
@@ -76,13 +82,49 @@ nav#Navegacion {
     padding: 0 10px; /* Separa lo de adentro del input */
 }
 
-.perfil {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%; /* Imagen redonda */
-    overflow: hidden; /* Oculta el desbordamiento de la imagen */
+
+
+.dropdown {
+    position: relative;
+    display: inline-block;
 }
 
+    /* Imagen del usuario */
+    .dropdown img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+
+/* Contenido del dropdown */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+    border-radius: 6px;
+    z-index: 1;
+}
+
+    /* Links del menú */
+    .dropdown-content a {
+        color: black;
+        padding: 10px 14px;
+        text-decoration: none;
+        display: block;
+    }
+
+        .dropdown-content a:hover {
+            background-color: #eee;
+        }
+
+/* Mostrar el menú cuando tenga la clase "show" */
+.show {
+    display: block;
+}
 main {
     max-width: 600px; /* Tamaño del contenedor main*/
     margin: 50px auto; /* distnacia entre el main y header */
@@ -165,6 +207,33 @@ main {
     border-radius: 2px;
 }
 
+
+#vehicle {
+    text-align: left;
+    width: 100%; /* O igual al ancho del contenedor del formulario */
+    display: block; /* Para que se vea en línea aparte */
+}
+
+#vehicle-Details {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+    padding: 50px 20px;
+    text-align: left; /* para alinear los labels e inputs a la izquierda */
+}
+
+
+    #vehicle-Details .form-group {
+        display: flex;
+        flex-direction: column;
+        flex: 1; /* que cada input ocupe el mismo ancho posible */
+        min-width: 100px;
+    }
+
+    #vehicle-Details label {
+        margin-bottom: 5px;
+        font-weight: normal;
+    }
 
 
 .form-actions {
